Fixed Menu, Title font alignement and margins

--- a/app/styles/custommath.scss
+++ b/app/styles/custommath.scss
@@ -16,6 +16,8 @@ width:760px;
 /* width:100%; */
 font-size: inherit;
 /*margin-bottom:30px;*/
+
+
 }
 
 .main-tabs {
@@ -36,11 +38,6 @@ text-align: center;
 
 }
 
-.container{
-width: 790px;
-max-width: 790px;
-}
-
 #backgroundmask{
     position: fixed;
     top: 0;
@@ -49,9 +46,30 @@ max-width: 790px;
 }
 
 #combocontainer{
+width:400px;
 float:right;
-margin-bottom:10px;
+margin-bottom:20px;
+margin-right:0px;
 }
+
+
+.container h1 {
+margin-top:0;
+margin-bottom:15px;
+font-family: 'IM Fell English', serif;
+color:#7C6849;
+
+}
+
+
+
+@media (min-width: 768px){
+.container {
+width: 790px;
+}
+}
+
+
 
 .figure-border {
   background-color: #efefef;
