--- a/app/styles/fancySelect.css
+++ b/app/styles/fancySelect.css
@@ -80,7 +80,7 @@ div.fancy-select ul.options {
 	z-index: 50;
 	max-height: 400px;
 	overflow: auto;
-	background: #f6f5f4;
+	background: #ffffff url(images/ui-bg_fine-grain_15_ffffff_60x60.png);
 	border-radius: 4px;
 	border-top: 1px solid #d4d1bf;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -152,6 +152,6 @@ div.fancy-select ul.options .hover {
 }
 
 div.fancy-select ul.options .selected {
-	background: #e8e7dc;
+	background: #eceadf url(images/ui-bg_fine-grain_10_eceadf_60x60.png) ;
 	color: #140f06;
 }
